--- a/Main Project/NavBarCode.html
+++ b/Main Project/NavBarCode.html
@@ -1,1 +1,13 @@
-<h1><a href="index.html">Home</a></h1>
+<html>
+<head>
+<style>
+  li {
+    display: inline;
+  }
+</style>
+</head>
+<body>
+  <ul>
+    <li><a href="index.html>/a></li>
+  </ul>
+</body>
