Finished peer networks web page

--- a/Main Project/Support Networks/index.html
+++ b/Main Project/Support Networks/index.html
@@ -149,7 +149,7 @@
 
         <h2>Trust Pilot</h2>
         <p>Trust pilot is a review site for businesses. Anyone can place reviews to inform others of their experience with the business.</p>
-        <p>This means that anyone can understand if they </p>
+        <p>This means that anyone can be aware of how trustworthy any business is. For example, this Durham estate agent <a href="https://www.trustpilot.com/review/morgandouglas.co.uk">Morgan Douglas</a> have a really bad set of reviews. Therefore people in durham looking for a house can know they might not want to live with them.</p>
       </article>
 
       <nav class="blog-pagination" aria-label="Pagination">
@@ -169,18 +169,9 @@
         <div class="p-4">
           <h4 class="fst-italic">Related Links</h4>
           <ol class="list-unstyled mb-0">
-            <li><a href="#">March 2021</a></li>
-            <li><a href="#">February 2021</a></li>
-            <li><a href="#">January 2021</a></li>
-            <li><a href="#">December 2020</a></li>
-            <li><a href="#">November 2020</a></li>
-            <li><a href="#">October 2020</a></li>
-            <li><a href="#">September 2020</a></li>
-            <li><a href="#">August 2020</a></li>
-            <li><a href="#">July 2020</a></li>
-            <li><a href="#">June 2020</a></li>
-            <li><a href="#">May 2020</a></li>
-            <li><a href="#">April 2020</a></li>
+            <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
+            <li><a href="https://www.tellmi.help/">Tellmi</a></li>
+            <li><a href="https://www.trustpilot.com/">Trust pilot</a></li>
           </ol>
         </div>
 
