--- a/Main Project/navbar.html
+++ b/Main Project/navbar.html
@@ -76,17 +76,17 @@
   <body>
     
 <main>
-  <nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
+  <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
     <div class="container-fluid">
       <a class="navbar-brand" href="Main Project/index.html">HOME PAGE NAME HERE AND WHATEVER WE GONNA CALL IT</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExample01">
-        <ul class="navbar-nav me-auto mb-2">
+      <div class="collapse navbar-collapse" id="navbarsExample02">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Main Project/index.html">HOME PAGE NAME HERE AS WELL</a>
+            <a class="nav-link active" aria-current="page" href="Main Project/index.html">Home page here as well</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Main Project/blind.html">Benefiting the bling</a>
