--- a/Main Project/blind.html
+++ b/Main Project/blind.html
@@ -162,7 +162,7 @@
             <div class="position-sticky" style="top: 2rem;">
                 <div class="p-4 mb-3 bg-light rounded">
                     <h4 class="fst-italic">About the Author</h4>
-                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+                    <p class="mb-0">This article was written by Keiran. He studies Computer Science at Durham. I think he eats food as he talks about going to tesco. He also goes to the Durham CompSoc society.</p>
                 </div>
                 <div class="p-4">
                     <h4 class="fst-italic">Related Links</h4>
