--- a/Main Project/index.html
+++ b/Main Project/index.html
@@ -230,9 +230,7 @@
               <div class="p-4">
                 <h4 class="fst-italic">Elsewhere</h4>
                 <ol class="list-unstyled">
-                  <li><a href="#">GitHub</a></li>
-                  <li><a href="#">Twitter</a></li>
-                  <li><a href="#">Facebook</a></li>
+                  <li><a href="https://youtu.be/dLHCS6oL7lo?list=PLD9ACF8C088878BBB">A Shrek 2 song</a></li>
                 </ol>
               </div>
             </div>
