--- a/Main Project/Support Networks/index.html
+++ b/Main Project/Support Networks/index.html
@@ -163,12 +163,13 @@
       <div class="position-sticky" style="top: 2rem;">
         <div class="p-4 mb-3 bg-light rounded">
           <h4 class="fst-italic">About the Author</h4>
-          <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+          <p class="mb-0">This article was written by the main man Enego. He studies Computer Science at a top 10 university. Has a disliking to Python. He has two eyes, two legs, two arms and a torso. I believe he eats food and drinks water. Goes to Durham CompSoc Society.</p>
         </div>
 
         <div class="p-4">
           <h4 class="fst-italic">Related Links</h4>
           <ol class="list-unstyled mb-0">
+            <li><a href="https://github.com/Enum99">Enego's Github page</a></li>
             <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
             <li><a href="https://www.tellmi.help/">Tellmi</a></li>
             <li><a href="https://www.trustpilot.com/">Trust pilot</a></li>
