Update Communication with navbar.html

--- a/Main Project/Communication with navbar.html
+++ b/Main Project/Communication with navbar.html
@@ -81,7 +81,7 @@
     
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
       <div class="container-fluid">
-        <a class="navbar-brand" href="Main Project/index.html">HOME PAGE NAME HERE AND WHATEVER WE GONNA CALL IT</a>
+        <a class="navbar-brand" href="Main Project/index.html">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -89,16 +89,16 @@
         <div class="collapse navbar-collapse" id="navbarsExample02">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Main Project/index.html">Home page here as well</a>
+              <a class="nav-link active" aria-current="page" href="Main Project/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Main Project/blind.html">Benefiting the bling</a>
+              <a class="nav-link" href="Main Project/blind.html">Benefiting the blind</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Main Project/Communication.html">Communication</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">WHATEVER THE OTHER PAGE IS CALLED</a>
+              <a class="nav-link" href="#">Piracy</a>
             </li>
           </ul>
           <form role="search">
