--- a/Main Project/navbar.html
+++ b/Main Project/navbar.html
@@ -95,7 +95,7 @@
             <a class="nav-link" href="Main Project/Communication.html">Communication</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Piracy</a>
+            <a class="nav-link" href="Main Project/Piracy.html">Piracy</a>
           </li>
         </ul>
         <form role="search">
