--- a/Main Project/blind.html
+++ b/Main Project/blind.html
@@ -98,7 +98,7 @@
                     <a class="nav-link" href="blind.html">Device for the Blind</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Communication.html">Communication</a>
+                    <a class="nav-link" href="Communication with navbar.html">Communication</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="Piracy.html">Piracy</a>
