Update Communication with navbar.html

--- a/Main Project/Communication with navbar.html
+++ b/Main Project/Communication with navbar.html
@@ -159,7 +159,7 @@
             <li><a href="https://en.wikipedia.org/wiki/Information_Age">Information Age</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Transistor">Transistors</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Optical_amplifier">Optical amplifers</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Fiber-optic_communication"></a>Fiber Optic Communications</li>
+            <li><a href="https://en.wikipedia.org/wiki/Fiber-optic_communication">Fiber Optic Communications</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Unix_time">Unix Time</a></li>
           </ol>
         </div>
