Fix broken links caused by github pages chaos

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
             <div class="carousel-item">
               <div class="overlay-image">
-                <img src="images/Business meeting.jpg" class="d-block w-100" alt="a business meeting">
+                <img src="images/business_meeting.jpg" class="d-block w-100" alt="a business meeting">
               </div>
               <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
 
@@ -162,7 +162,7 @@
             </div>
             <div class="carousel-item">
               <div class="overlay-image">
-                <img src="images/Worker on the computer.jpg" class="d-block w-100" alt="worker on the computer">
+                <img src="images/worker_on_the_computer.jpg" class="d-block w-100" alt="worker on the computer">
               </div>  
               <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
 
